networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    sas.com/kustomize-base: base
  name: deny-all-networkpolicy
  namespace: viya4stable202302    # 需修改ns 名稱
  labels:
    sas.com/admin: cluster-local
spec:
  podSelector:
    matchLabels:
      app: sas-logon-app
  policyTypes:
  - Ingress
